fix delete and transfer
